# mediforce-mcp-skill-demo

./: .dockerignore  .gitignore  Dockerfile  README.md
container/: run.py
mcp/wordtools/: README.md  pyproject.toml
mcp/wordtools/src/wordtools_mcp/: __init__.py  server.py
plugins/mcp-skill-demo/.claude-plugin/: plugin.json
plugins/mcp-skill-demo/skills/: _registry.yml
plugins/mcp-skill-demo/skills/word-poem/: SKILL.md
src/: mcp-skill-demo.wd.json
