[project]
name = "wordtools-mcp"
version = "0.1.0"
description = "MCP server exposing offline word tools (anagrams) backed by the system wordlist."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
]

[project.scripts]
wordtools-mcp = "wordtools_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wordtools_mcp"]
